--- a/museosmvc/src/main/resources/templates/formMuseo.html
+++ b/museosmvc/src/main/resources/templates/formMuseo.html
@@ -3,76 +3,122 @@
 <head th:fragment="head">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Buscador</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Dosis&family=Jost:ital,wght@0,100..900;1,100..900&family=Lobster&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #cae2ff;
+        }
+
+        .bg-lightblue {
+            background-color: #0857a3 !important;
+        }
+
+        .custom-button {
+            background-color: #3a7193;
+            border-color: #0056b3;
+            color: white;
+        }
+
+        .custom-button:hover {
+            background-color: #0857a3;
+            border-color: #003d80;
+        }
+
+        .titulo-principal {
+            color: #3a7193;
+            font-weight: 700;
+        }
+
+        label.form-label {
+            font-weight: bold;
+        }
+
+        .form-control {
+            border-radius: 50px;
+        }
+    </style>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navbar">
+<nav class="navbar navbar-expand-lg navbar-dark bg-lightblue" th:fragment="navbar">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand d-flex align-items-center" href="#">
+            <img src="https://cdn0.iconfinder.com/data/icons/database-64/32/crud_create_read_update_delete-512.png"
+                 alt="Logo"
+                 style="width: 30px; height: 30px; margin-right: 10px;">
+            MUSEOS
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
+                <li class="nav-item"><a class="nav-link active" th:href="@{/buscador/museo}">Registrar</a></li>
+                <li class="nav-item"><a class="nav-link active" th:href="@{/buscador/buscar}">Buscar</a></li>
+                <li class="nav-item"><a class="nav-link active" th:href="@{/buscador/editar}">Editar</a></li>
+                <li class="nav-item"><a class="nav-link active" th:href="@{/buscador/eliminar}">Eliminar</a></li>
             </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
         </div>
     </div>
 </nav>
 
-<div class="container mt-5">
+<div class="container mt-5 mb-4">
     <main class="flex-fill">
-        <p class="text-success" th:if="${param.exito}">¡El Museo ha sido de alta con éxito!</p>
-        <hr>
-        <form th:action="@{/buscador/guardar}" th:object="${museo}" th:method="post">
-            <label>Nombre:</label> <input type="text" name="nombre" id="nombre" th:field="*{nombre}">
-            <label>Fundación(año):</label> <input type="text" name="fundacion" id="fundacion" th:field="*{fundacion}">
-            <label>Ubicación:</label> <input type="text" name="ubicacion" id="ubicacion" th:field="*{ubicacion}">
-            <label>Tipo:</label> <input type="text" name="tipo" id="tipo" th:field="*{tipo}">
-            <label>Precio:</label> <input type="text" name="precio" id="precio" th:field="*{precio}">
-            <label>Imagen:</label> <input type="text" name="imagen" id="imagen" th:field="*{imagen}">
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <h3 class="text-center titulo-principal mb-3">Registro de Museos</h3>
+                <div th:if="${param.exito}" class="alert alert-success text-center">¡El Museo ha sido dado de alta con éxito!</div>
 
-            <button type="submit">Enviar</button>
-
-        </form>
-
+                <div class="card shadow mb-4">
+                    <div class="card-body">
+                        <form th:action="@{/buscador/guardar}" th:object="${museo}" th:method="post">
+                            <div class="mb-3">
+                                <label for="nombre" class="form-label">Nombre:</label>
+                                <input type="text" id="nombre" th:field="*{nombre}" class="form-control" placeholder="Ej: Museo del Prado">
+                            </div>
+                            <div class="mb-3">
+                                <label for="fundacion" class="form-label">Fundación (año):</label>
+                                <input type="text" id="fundacion" th:field="*{fundacion}" class="form-control" placeholder="Ej: 2025">
+                            </div>
+                            <div class="mb-3">
+                                <label for="ubicacion" class="form-label">Ubicación:</label>
+                                <input type="text" id="ubicacion" th:field="*{ubicacion}" class="form-control" placeholder="Ej: Oaxaca">
+                            </div>
+                            <div class="mb-3">
+                                <label for="tipo" class="form-label">Tipo:</label>
+                                <input type="text" id="tipo" th:field="*{tipo}" class="form-control" placeholder="Ej: Historia">
+                            </div>
+                            <div class="mb-3">
+                                <label for="precio" class="form-label">Precio:</label>
+                                <input type="text" id="precio" th:field="*{precio}" class="form-control" placeholder="Ej: 500">
+                            </div>
+                            <div class="mb-3">
+                                <label for="imagen" class="form-label">Imagen (URL):</label>
+                                <input type="text" id="imagen" th:field="*{imagen}" class="form-control" placeholder="Ej: https://upload.wikimedia.org/wikipedia/commons/a/a5/Fachada_Museo_Amparo.jpg">
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                <button type="submit" class="btn custom-button px-4">Guardar Museo</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </div>
 
-<footer class="mt-auto" th:fragment="footer">
-    Temas especiales 2025
+<footer class="mt-auto bg-lightblue text-white text-center py-3" th:fragment="footer">
+    Todos los derechos reservados ©Temas Especiales "Proyecto Final"
 </footer>
-
 <div th:fragment="jsincludes">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
 </div>
-
 </body>
 </html>
