--- a/Carrosmvc/src/main/resources/templates/VerCarro.html
+++ b/Carrosmvc/src/main/resources/templates/VerCarro.html
@@ -36,7 +36,7 @@
                         <strong>Modelo:</strong> <span th:text="${CarroBuscado.modelo}"></span><br>
                         <strong>Año:</strong> <span th:text="${CarroBuscado.año}"></span><br>
                         <strong>Version:</strong> <span th:text="${CarroBuscado.version}"></span><br>
-                        <strong>Color:</strong> $<span th:text="${CarroBuscado.color}"></span>
+                        <strong>Color:</strong> <span th:text="${CarroBuscado.color}"></span>
                     </p>
                 </div>
             </div>
@@ -49,10 +49,10 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title" th:text="${carro.marca}">Marca de carro</h5>
                         <p class="card-text">
-                            <strong>Fundación:</strong> <span th:text="${carro.modelo}"></span><br>
-                            <strong>Ubicación:</strong> <span th:text="${carro.año}"></span><br>
-                            <strong>Tipo:</strong> <span th:text="${carro.version}"></span><br>
-                            <strong>Precio:</strong> $<span th:text="${carro.color}"></span>
+                            <strong>Modelo:</strong> <span th:text="${carro.modelo}"></span><br>
+                            <strong>Año:</strong> <span th:text="${carro.año}"></span><br>
+                            <strong>Version:</strong> <span th:text="${carro.version}"></span><br>
+                            <strong>Color:</strong> <span th:text="${carro.color}"></span>
                         </p>
                     </div>
                 </div>
