--- a/pinturasMVC/src/main/resources/templates/FormCrear.html
+++ b/pinturasMVC/src/main/resources/templates/FormCrear.html
@@ -52,7 +52,7 @@
             <img src="https://cdn0.iconfinder.com/data/icons/database-64/32/crud_create_read_update_delete-512.png"
                  alt="Logo"
                  style="width: 30px; height: 30px; margin-right: 10px;">
-            Agencia
+            Galeria
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
@@ -72,27 +72,27 @@
     <main class="flex-fill">
         <div class="row justify-content-center">
             <div class="col-md-4">
-                <h3 class="text-center titulo-principal mb-3">Registro de Carros</h3>
-                <div th:if="${param.exito}" class="alert alert-success text-center">¡El Carro ha sido dado de alta con éxito!</div>
+                <h3 class="text-center titulo-principal mb-3">Registro de pinturas</h3>
+                <div th:if="${param.exito}" class="alert alert-success text-center">¡La pintura ha sido dado de alta con éxito!</div>
 
                 <div class="card shadow mb-4">
                     <div class="card-body">
                         <form th:action="@{/galeria/guardar}" th:object="${pintura}" th:method="post">
                             <div class="mb-3">
                                 <label for="artista" class="form-label">Artista:</label>
-                                <input type="text" id="artista" th:field="*{artista}" class="form-control" placeholder="Ej: Pieter Bruegel">
+                                <input type="text" id="artista" th:field="*{m.artista}" class="form-control" placeholder="Ej: Pieter Bruegel">
                             </div>
                             <div class="mb-3">
                                 <label for="nombre" class="form-label">Nombre:</label>
-                                <input type="text" id="nombre" th:field="*{nombre}" class="form-control" placeholder="Ej: El triunfo de la Muerte">
+                                <input type="text" id="nombre" th:field="*{m.nombre}" class="form-control" placeholder="Ej: El triunfo de la Muerte">
                             </div>
                             <div class="mb-3">
                                 <label for="year" class="form-label">Año:</label>
-                                <input type="text" id="year" th:field="*{year}" class="form-control" placeholder="Ej: 1562">
+                                <input type="text" id="year" th:field="*{m.year}" class="form-control" placeholder="Ej: 1562">
                             </div>
                             <div class="mb-3">
                                 <label for="imagen" class="form-label">Imagen (URL):</label>
-                                <input type="text" id="imagen" th:field="*{imagen}" class="form-control" placeholder="Ej: ">
+                                <input type="text" id="imagen" th:field="*{m.imagen}" class="form-control" placeholder="Ej: ">
                             </div>
                             <div class="d-flex justify-content-center">
                                 <button type="submit" class="btn custom-button px-4">Guardar pintura</button>
