--- a/Planetas-del-sistema-solar/src/main/resources/templates/formplaneta.html
+++ b/Planetas-del-sistema-solar/src/main/resources/templates/formplaneta.html
@@ -67,10 +67,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link active" th:href="@{/sistemasolar/planeta/}">Nuevo Planeta </a></li>
-                <li class="nav-item"><a class="nav-link active" th:href="@{/sistemasolar/buscar/}">Buscar</a></li>
-                <li class="nav-item"><a class="nav-link active" th:href="@{/sistemasolar/editar/}">Editar</a></li>
-                <li class="nav-item"><a class="nav-link active" th:href="@{/siatemasolar/eliminar/}">Eliminar</a></li>
+                <li class="nav-item"><a class="nav-link active" th:href="@{/sistemasolar/planeta}">Nuevo Planeta </a></li>
+                <li class="nav-item"><a class="nav-link active" th:href="@{/sistemasolar/buscar}">Buscar</a></li>
+                <li class="nav-item"><a class="nav-link active" th:href="@{/sistemasolar/editar}">Editar</a></li>
+                <li class="nav-item"><a class="nav-link active" th:href="@{/sistemasolar/eliminar}">Eliminar</a></li>
             </ul>
         </div>
     </div>
